--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start:api": "json-server --watch db.json"
+    "start:api": "json-server --watch server/db.json --routes server/routes.json"
   },
   "private": true,
   "dependencies": {
