--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "^19.2.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "chart.js": "^4.5.0",
     "file-saver": "^2.0.5",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
