feat(deployment): update environment configuration and add deploy script

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
               "src/custom-theme.scss",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "/UI-Topic-Frontend/"
           },
           "configurations": {
             "production": {
