--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start:api": "json-server --watch server/db.json --routes server/routes.json"
+    "start:api": "json-server --watch server/db.json --routes server/routes.json",
+    "deploy": "ng build --configuration production && npx angular-cli-ghpages --dir=dist/ui-topic-frontend/browser"
   },
   "private": true,
   "dependencies": {
